# mylog

./: .bandit  .editorconfig  .gitignore  .markdownlint.json  .minpackver.toml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  DOCUMENTATION.md  README.md  SECURITY.md  bandit.yml  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/: dependabot.yml  issue-branch.yml  pull_request_template.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml  give-an-idea.md  issue-before-pr.md  issue_before_pr.yml
.github/workflows/: codacy-coverage-reporter.yml  codeql-analysis.yml  dependency-review.yml  devskim.yml  lemming.yml  linting.yml  ossar.yml  python-publish.yml  scorecard.yml  tests.yml
src/mylog/: __init__.py
tests/: test_mylog.py
