[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.ruff]
select = ["ALL"]
ignore = [
    "ANN101",
    "ANN102",
    "COM812",
    "D100",
    "D105",
    "D212",
    "D205",
    "D415",
    "EM",
    "FA",
    "FBT",
    "SLF001",
    "TRY003",
]
per-file-ignores = { "tests/*" = ["D", "S101"] }
line-length = 79
target-version = "py38"

[tool.ruff.pydocstyle]
convention = "google"
ignore-decorators = ["typing.overload"]

[[tool.lemming.linters]]
packages = ["ruff"]
command = "{pyexe} -m ruff check . --show-source"
run_first = true

[[tool.lemming.formatters]]
packages = ["black"]
format_command = "{pyexe} -m black -l 79 {path}"
check_command = "{pyexe} -m black -l 79 --check --extend-exclude .*venv.* {path}"

[[tool.lemming.formatters]]
packages = ["setup_cfg_fmt"]
format_command = "{pyexe} -m setup_cfg_fmt --include-version-classifiers"
# no check

[[tool.lemming.formatters]]
packages = ["isort"]
format_command = "{pyexe} -m isort --profile black {path}"
check_command = "{pyexe} -m isort --profile black -c {path}"

[[tool.lemming.linters]]
packages = ["pyroma"]
command = "{pyexe} -m pyroma {path}"
