[metadata]
name = mylog
version = attr: mylog.__version__
description = My logger library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/koviubi56/mylog
author = Koviubi56
author_email = koviubi56@duck.com
license = LGPL-3.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = logger, log

[options]
packages =
    mylog
install_requires =
    termcolor==1.1.0
    typing-extensions==4.1.1

python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.package_data]
mylog = py.typed

[flake8]
extend-ignore = E501,W503
extend-exclude = venv,*cache*
per-file-ignores =
    test_*.py: S101,DUO102,S311
