[metadata]
name = python_mylog
version = attr: mylog.__version__
description = My logger library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/koviubi56/mylog
author = Koviubi56
author_email = koviubi56@duck.com
license = LGPL-3.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: System :: Logging
keywords = logger, log
project_urls =
    Documentation = https://github.com/koviubi56/mylog#api-reference
    Release notes = https://github.com/koviubi56/mylog/blob/main/CHANGELOG.md
    Source = https://github.com/koviubi56/mylog
    Bug Tracker = https://github.com/koviubi56/mylog/issues

[options]
packages =
    mylog
install_requires =
    termcolor>=0.2
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.package_data]
mylog = py.typed

[flake8]
extend-ignore = W503
extend-exclude = venv,*cache*
per-file-ignores =
    test_*.py: S101
